# AntsArray

./: .gitattributes  .gitignore  CLAUDE.md  HANDOFF_A100.md  README.md  audio_commands.py  batch_segmented_transcode_sleap.sh  batch_segmented_transcode_sleap_Anouk.sh  batch_slp2csv.sh  batch_slp2h5.sh  combine_results.sh  compare_sleap_inference.sh  create_tiled_video.py  get_arena_seg.py  pyproject.toml  root_folder_paths.txt  run_aruco.py  sleap2csv.py  sleap2h5.py  slurm_sleap2csv.sh  temp.py  transcode_sleap.sh  transcode_sleap_aruco.sh  transcode_sleap_aruco_flow.md  video_transcode.sh
CameraCalibration/: ExtractFirstFrame.m  GenerateArucoGrid.py  MultiCamMosaicGenerator.m  MultiCamMosaicGenerator_arrayjob.m  aruco_grid_5x5_1000.ai  aruco_grid_6x6_1000.ai  aruco_tag_detector.py  bundle_adjust.m  calculateImageDimensionsInFolder.m  calculateZoomRatiosInFolder.m  checkLatticeDetection.m  createPanorama.m  generateCalibrationPattern.m  mosaic_arrayjob.sh  residual_all_robust_similarity.m  zoom_image_videos.m
JOBS_DIR_P/: enc-SEGBASE_9016098.err
Pipeline_for_single_seq_extraction_and_cleaning/: STEP1_extract_aruco_panorama_frame.ipynb  STEP2_extract_sleap_on_panorama_frame.ipynb  STEP3_align_tracks.ipynb  STEP4_get_active_ids.ipynb  STEP6_speed_and_acc.ipynb  STEP7_compute_avg_distance.ipynb  STEP8_compute_time_outside_nest.ipynb  STEP_1_extract_aruco_panorama_frame.ipynb
Slp2Csv_mfiles/: batch_slp2csv.m  slp2csv.m  slp2hdf5.m
analysis/: __init__.py  ant_interaction_lightweight_test.py  cluster_time_of_day_occupancy.py  colony_behavior.py  colony_speed.py  (+37 more)
(+242 files in other folders)
