[project]
name = "antsarray"
version = "0.1.0"
description = "AntsArray analysis and tracking pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "tqdm",
    "h5py",
    "opencv-python",
    "pillow",
    "torch>=2.0",
    "torchvision>=0.15",
    "segmentation-models-pytorch",
    "sleap-io",
    "ultralytics",
    "pyyaml",
    "pymupdf>=1.26.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
